--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,7 +10,6 @@
     <meta name="description" content="{{ description or metadata.description }}">
     {% favicon './public/favicon.svg' %}
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
-    <script src="/menu.js" type="text/javascript"></script>
   </head>
   <body class="flex flex-col h-full items-center">
     <a href="#skip" class="sr-only">Skip to main content</a>
@@ -25,6 +24,6 @@
       </main>
     </div>
     {% include "footer.njk" %}
-    <script src="/pagefind/pagefind-ui.js" type="text/javascript"></script>
+    <script async src="/pagefind/pagefind-ui.js" type="text/javascript"></script>
   </body>
 </html>
